--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <p>Here's something special just for you. 😊</p>
         
         <div class="message-box">
-            <p class="hidden-message">Can I join you guys today for a walk? If you feel comfortable...</p>
+            <p class="hidden-message">Can I join you guys today for a walk? If you feel comfortable... Reply on Snappp!</p>
         </div>
 
         <button onclick="revealMessage()">Click to Reveal 💌</button>
